[package]
edition = "2024"
name = "proctest"
version = "0.1.0"
authors = [""]

[lib]
crate-type = ["staticlib"]
path = "src/validate.rs"
test = false
doctest = false
bench = false

[dependencies]
# Local dependencies
terminal = { path = "../../library/terminal" }
runtime = { path = "../../library/runtime" }
naming = { path = "../../library/naming" }